; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_hw_v2.c_hns_roce_free_srq_wqe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_hw_v2.c_hns_roce_free_srq_wqe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns_roce_srq = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hns_roce_srq*, i32)* @hns_roce_free_srq_wqe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns_roce_free_srq_wqe(%struct.hns_roce_srq* %0, i32 %1) #0 {
  %3 = alloca %struct.hns_roce_srq*, align 8
  %4 = alloca i32, align 4
  store %struct.hns_roce_srq* %0, %struct.hns_roce_srq** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hns_roce_srq*, %struct.hns_roce_srq** %3, align 8
  %6 = getelementptr inbounds %struct.hns_roce_srq, %struct.hns_roce_srq* %5, i32 0, i32 0
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.hns_roce_srq*, %struct.hns_roce_srq** %3, align 8
  %9 = getelementptr inbounds %struct.hns_roce_srq, %struct.hns_roce_srq* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @bitmap_clear(i32 %11, i32 %12, i32 1)
  %14 = load %struct.hns_roce_srq*, %struct.hns_roce_srq** %3, align 8
  %15 = getelementptr inbounds %struct.hns_roce_srq, %struct.hns_roce_srq* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 4
  %18 = load %struct.hns_roce_srq*, %struct.hns_roce_srq** %3, align 8
  %19 = getelementptr inbounds %struct.hns_roce_srq, %struct.hns_roce_srq* %18, i32 0, i32 0
  %20 = call i32 @spin_unlock(i32* %19)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @bitmap_clear(i32, i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
